Add email notifications for comments and downloads
- Updated comment notification email to include commenter email and post title
- Added new email template for download notifications
- Download notifications sent to admin when software is requested
- Both notifications sent to roberto.dalicandro@gmail.com
- Updated .gitignore to exclude large media files

--- a/templates/email/moderation_notification.html
+++ b/templates/email/moderation_notification.html
@@ -58,10 +58,12 @@
     <div class="container">
         <div class="header">Nuovo Commento da Moderare</div>
         <p>Un nuovo commento è stato inviato sul blog e attende la tua approvazione.</p>
-        
+
         <div class="comment-box">
             <div class="comment-author">Da: {{ name }}</div>
-            <p>"{{ message_content }}"</p>
+            <div style="margin-bottom: 10px;"><strong>Email:</strong> {{ email }}</div>
+            <div style="margin-bottom: 10px;"><strong>Articolo:</strong> {{ post_title }}</div>
+            <p><strong>Commento:</strong><br>"{{ message_content }}"</p>
         </div>
 
         <div class="actions">
